--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular-resource": "^1.5.8",
     "angular-ui-bootstrap": "^2.1.4",
+    "async": "^2.0.1",
     "express": "^4.14.0",
     "request": "^2.75.0"
   }
