--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "async": "^2.0.1",
     "express": "^4.14.0",
     "request": "^2.75.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-latest": "^6.16.0"
   }
 }
